--- a/app/views/admin/show/_meta_tag_social_helper.html.arb
+++ b/app/views/admin/show/_meta_tag_social_helper.html.arb
@@ -1,4 +1,4 @@
-attributes_table_for object.meta_tag do
+attributes_table_for resource.meta_tag do
   row :og_title
   row :og_description
   row :og_image
