--- a/app/views/admin/show/_meta_tag_social_helper.html.arb
+++ b/app/views/admin/show/_meta_tag_social_helper.html.arb
@@ -1,9 +1,14 @@
 attributes_table_for resource.meta_tag do
   row :og_title
   row :og_description
-  row :og_image
+  row :og_type
+  row :og_image do 
+    image_tag resource.meta_tag.og_image_upload.image_url(:square_400) if resource.meta_tag&.og_image_upload&.image_url(:square_400).present?
+  end
   row :twitter_title
   row :twitter_description
-  row :twitter_media
+  row :twitter_media do 
+    image_tag resource.meta_tag.twitter_image_upload.image_url(:square_400) if resource.meta_tag&.twitter_image_upload&.image_url(:square_400).present?
+  end
   row :twitter_card_type
 end
